# Space4ErrBody

./: .gitignore
Space4ErrBody/Space4ErrBody_Executables_and_Headers/: CMakeLists.txt  CMakeLists_ before implementing optmization file structure.txt  Space4ErrBody.cpp  Space4ErrBody.h  applicationOutput_pagmo.h  applicationOutput_tudat.h  saveOptimizationResults.h
Space4ErrBody_0/: CMakeLists.txt  Space4ErrBody.cpp  Space4ErrBody_Optimization.cpp  body_by_Bislip.h
Space4ErrBody_0/Space4ErrBody_Executables_and_Headers/: CMakeLists.txt  Space4ErrBody.cpp  Space4ErrBody.h  Space4ErrBodyProblem.cpp  Space4ErrBodyProblem.h  StopOrNot.cpp  StopOrNot.h  StopOrNot_val.cpp  applicationOutput_pagmo.h  applicationOutput_tudat.h  bislipVariables.cpp  bislipVariables.h  computeSpecificEnergy.cpp  getCoefficients.cpp  getCurrentBodyFixedThrustDirection.cpp  getCurrentCoefficients.cpp  getCurrentDateTime.cpp  getCurrentEngineStatus.cpp  getCurrentSpecificImpulse.cpp  getCurrentThrustMagnitude.cpp  getDataNumeri.cpp  getDataString.cpp  getE_hat.cpp  getEps_T.cpp  getF.cpp  getGamma.cpp  getGamma.h  getGravs.cpp  getHeadingToTarget.cpp  getRoot.cpp  getSorting.cpp  getStuff.h  multi_dimensional_root_finding.hpp  saveOptimizationResults.h  search_Coefficients.h  setE_hat.cpp  updateGuidance.cpp  updateGuidance.h  updateGuidance_val.cpp  updateGuidance_val.h
Space4ErrBody_0/Space4ErrBody_Executables_and_Headers/executables/: HORUS_CL.txt  HORUS_Cm.txt  HORUS_dCD_B.txt  aeroCoeffFileList.txt  initialConditionsList.txt  initialConditionsValues.txt  optimization_settingsList.txt  optimization_settingsValues.txt  output_settingsList.txt  parameterBounds.txt  parameterBounds_Ascent.txt  parameterBounds_Descent.txt  parameterList.txt  parameterList_Ascent.txt  parameterList_Descent.txt  primary.txt  simulation_settingsList.txt  simulation_settingsValues.txt  terminationConditionsList.txt  terminationConditionsValues.txt  vehicleParameterList.txt  vehicleParameterValues.txt
Space4ErrBody_0/Space4ErrBody_Executables_and_Headers/trash/: StopOrNot.cpp  StopOrNot.h  bislipSystems.h  body_by_Bislip.h  getAngularDistance.cpp  getCurrentEngineStatus.cpp  getDataString.cpp  updateGuidance_val.cpp  updateGuidance_val.h
Space4ErrBody_0/Space4ErrBody_Headers/: CMakeLists.txt  Space4ErrBodyProblem.cpp  Space4ErrBodyProblem.h  bislipUtilities.h  bislipVariables1.cpp  getCurrentCoefficients.cpp  getCurrentEngineStatus.cpp  getOutputPath.h  getPagmoAlgorithm.cpp  getPagmoAlgorithm.h  guidanceFunctions.cpp  guidanceFunctions.h  runInputArgumentEvaluator.cpp  runInputArgumentEvaluator.h  updateGuidance.cpp  updateGuidance.h
Space4ErrBody_0/Space4ErrBody_Headers/executables/: FSS1vehicleParameterValues.txt  HORUSVALIDATIONvehicleParameterValues.txt  HORUS_CD.txt  HORUS_dCD_B.txt  HORUS_dCD_E.txt  HORUS_dCD_H.txt  HORUS_dCL_E.txt  HORUS_dCm_B.txt  HORUS_dCm_E.txt  HORUSalphaMachEnvelopeLB.txt  HORUSalphaMachEnvelopeUB.txt  HORUSheadingErrorDeadBandCoarse.txt  HORUSheadingErrorDeadBandLowDistance.txt  HORUSkourouAngleofAttack.txt  HORUSkourouTimeHistories.txt  HORUSvehicleParameterList.txt  HORUSvehicleParameterValues.txt  THESISconstraintsValues.txt  THESIShardConstraintsList.txt  THESISinitialConditionsValues.txt  THESISoptimization_settingsList.txt  THESISoptimization_settingsValues.txt  THESISparameterBounds_Ascent.txt  THESISparameterBounds_AscentFSS1.txt  THESISparameterBounds_AscentHORUS.txt  THESISparameterBounds_Descent.txt  THESISparameterBounds_DescentHORUS.txt  THESISparameterList_Ascent.txt  THESISparameterList_Descent.txt  THESISsimulation_settingsValues.txt  VALIDATIONinitialConditionsValues.txt  VALIDATIONoptimization_settingsValues.txt  VALIDATIONoutput_settingsList.txt  VALIDATIONparameterBounds_Ascent.txt  VALIDATIONparameterBounds_Descent.txt  VALIDATIONparameterList_Descent.txt  VALIDATIONsimulation_settingsList.txt  VALIDATIONsimulation_settingsValues.txt  aeroCoeffFileList.txt  aerodynamicCoefficientFiles.txt  (+57 more)
Space4ErrBody_0/Space4ErrBody_Headers/trash/: StopOrNot.cpp  StopOrNot.h  applicationOutput_tudat.h  bislipUtilities.h  bislipVariables1.cpp  bislipVariables1.h  body_by_Bislip.h  getCoefficients.cpp  getCurrentBodyFixedThrustDirection copy.cpp  getCurrentCoefficients.cpp  getCurrentDateTime.cpp  getCurrentThrustMagnitude copy.cpp  getDataNumeri.cpp  getDataString.cpp  getE_hat.cpp  getHeadingToTarget.cpp  getPagmoAlgorithm.h  guidanceFunctions.cpp  updateGuidance.cpp  (+1 more)
Space4ErrBody_0/matlab/: Analyze_Evolution.m  Book1(AutoRecovered).xlsx  Book1.xlsx  Contruct_File_Paths.m  Contruct_File_prefix.m  Get_Trajectories.m  Get_Trajectories.m~  Load_Data.m  Path_Prep.m  Read_Folder_Content.m  Space4ErrBody_main.m  analysis.m  bisection.m  convertNegativeAnglesToPositive.m  createAeroCoeffInterpolator.m  entryCorridor_density.m  entryCorridor_mechanical.m  fields.xlsx  flightpathangleratecalc.m  getCompilation.m  getCompilationLoop.m  getStructuredTrajectoryDepVar.m  importSimulationData.m  importfile.m  initializeDecisionVectorFields.m  initializeDecisionVectorNodalParameterFields.m  initializeDependentVariableFields.m  initializeExtremesAndConstraintsFields.m  initializeFitnessVectorFields.m  initializeFitnessVectorFields1.m  inputCaseMatrix.txt  latlon_orientation.m  loadDecisionVectorFromPopulationCellArray.m  loadFitnessFile.m  loadFitnessVectorFromFitnessCellArray.m  loadIndividualDataFromDependentVariableFile.m  loadPopulationFile.m  plotAlphaMachForDiscussion.m  plotCompoundRelations.m  plotDecisionVector.m  (+32 more)
Space4ErrBody_testing/Space4ErrBody_Executables_and_Headers_testing/: CMakeLists.txt  Space4ErrBody.cpp  Space4ErrBody.cpp.autosave  Space4ErrBody.h  StopOrNot_val.cpp  StopOrNot_val.h  applicationOutput_pagmo.h  applicationOutput_tudat.h  getAngularDistance.cpp  getCoefficients.cpp  getCurrentDateTime.cpp  getData.cpp  getEps_T.cpp  getFiles.cpp  getFitness.cpp  getGamma.cpp  getGravs.cpp  getHeadingToTarget.cpp  getRoot.cpp  getStuff.h  multi_dimensional_root_finding.cpp  search_Coefficients.cpp  updateGuidance.cpp  updateGuidance.h  updateGuidance_val.cpp  updateGuidance_val.h
(+141 files in other folders)
